--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,19 @@
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="New Ticket"
+            android:text="New Audio Ticket"
             android:textColor="@color/txt_font"
 
             />
+        <Button
+            android:id="@+id/btnNewMediaTicket"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="New Media Ticket"
+            android:textColor="@color/txt_font"
+            />
+
         <Button
             android:layout_width="fill_parent"
             android:layout_height="0dp"
