--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,11 @@
             />
 
         <Button
+            android:id="@+id/btnChatTicket"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="Update Ticket"
+            android:text="Chat Ticket"
             android:textColor="@color/txt_font"
 
             />
