--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,21 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
-
-        <ListView
-            android:id="@+id/messagesContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/messageEdit"
-            android:layout_alignParentLeft="false"
-            android:layout_alignParentTop="false"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="0dp"
-            android:divider="@null"
-            android:listSelector="@android:color/transparent"
-            android:scrollbars="none"
-            android:transcriptMode="alwaysScroll" />
+        android:padding="0dp">
 
         <EditText
             android:id="@+id/messageEdit"
@@ -41,6 +27,21 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:text="Send" />
+
+        <ListView
+            android:id="@+id/messagesContainer"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_marginBottom="10dp"
+            android:layout_above="@+id/messageEdit"
+            android:layout_marginTop="0dp"
+            android:scrollbars="none"
+            android:listSelector="@android:color/transparent"
+            android:transcriptMode="alwaysScroll"
+            android:divider="@null" />
+
 
     </RelativeLayout>
 </LinearLayout>
