--- a/app/src/main/res/layout/list_item_message.xml
+++ b/app/src/main/res/layout/list_item_message.xml
@@ -36,6 +36,34 @@
                 android:textColor="@android:color/black"
                 android:maxWidth="250dp" />
 
+            <LinearLayout android:id="@+id/audioSeekBar"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:visibility="invisible">
+            <ImageButton
+                android:id="@+id/seekPlay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/play"
+                android:onClick="playFromList"
+                android:src="@drawable/play_icon"
+                android:background="@android:color/transparent"/>
+
+                <ImageButton
+                    android:id="@+id/seekPause"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/play"
+                    android:onClick="play"
+                    android:src="@drawable/pause_icon"
+                    android:background="@android:color/transparent"
+                    android:visibility="invisible"/>
+        </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
