--- a/app/src/main/res/layout/list_item_message.xml
+++ b/app/src/main/res/layout/list_item_message.xml
@@ -77,6 +77,17 @@
                     android:background="@android:color/transparent"/>
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/mapLayout"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/map3"
+                android:background="@android:color/transparent"/>
+
+
+
+
+
         </LinearLayout>
 
     </LinearLayout>
